--- a/html.html
+++ b/html.html
@@ -19,7 +19,7 @@
 
     <section id="about">
         <div class="section-content">
-            <img src=".\Assets\me.png" alt="Areeba Faisal">
+            <img src=".\me.png" alt="Areeba Faisal">
             <h3 >
                 Hello! I'm Areeba Faisal, a passionate web developer with a strong focus on creating user-friendly and visually appealing websites. 
             </h3>
@@ -70,20 +70,20 @@
             <h2>Projects</h2>
             <hr>
             <div class="project">
-                <img src="./Assets/astf.png" alt="ASTF">
+                <img src="./astf.png" alt="ASTF">
                 <h3><a href="https://github.com/Areeba-28Faisal/">ASTF Signal Detection</a></h3>
 
                 <p>Display the recorded radio signals in a time frequency domain using html, CSS and NodeJs. </p>
             </div>
             <hr>
             <div class="project">
-                <img src="./Assets/tdl.png" alt="To do list">
+                <img src="./tdl.png" alt="To do list">
                 <h3><a href="https://github.com/Areeba-28Faisal/Codsoft/tree/To-do-list">To Do List</a></h3>
                 <p>Create a To do list using Html, CSS and JavaScript to store edit and delete the tasks.</p>
             </div>
             <hr>
             <div class="project">
-                <img src="./Assets/calc.png" alt="Calculator">
+                <img src="./calc.png" alt="Calculator">
                 <h3><a href=" https://github.com/Areeba-28Faisal/Codsoft/tree/Calculator">Calculator</a></h3>
                 <p>A simple Calculatr implementation to add, subtract, mutiply and divide the values and display them.</p>
             </div>
